# pi-pico-mlx90393

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
mlx90393/: CMakeLists.txt  mlx90393demo.cpp
